syntax = "proto3";

package grpc.hello.v1;

service HelloService {
    rpc HelloWorld(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}